[workspace]
resolver = "2"
members = [
  "async-opcua",
  "async-opcua-pubsub",
  "async-opcua-safety",
  "samples/*",
  "async-opcua-*",
  "tools/certificate-creator",
  "dotnet-tests/external-tests",
  "fuzz", "codegen-tests",
]
# samples/profiles holds deployment config files (*.conf), not a crate; keep the
# samples/* glob from treating it as a workspace member.
exclude = ["samples/profiles"]

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"


[workspace.dependencies]
arc-swap = "^1"
async-trait = "^0.1"
base64 = "^0.22"
bitflags = "^2"
byteorder = "^1"
bytes = "^1"
chrono = { version = "^0.4", features = ["serde"] }
convert_case = "^0.6"
criterion = "^0.5"
env_logger = "0.11"
futures = "^0.3"
gethostname = "^0.5"
hashbrown = "^0.15"
log = "^0.4"
num-bigint-dig = "^0.8.6"
parking_lot = { version = "^0.12", features = ["send_guard"] }
postcard = { version = "^1", features = ["use-std"] }
proc-macro2 = "^1"
quick-xml = "0.37.2"
quote = "^1"
regex = "^1"
roxmltree = "^0.20"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["arbitrary_precision"] }
serde_with = "^3"
serde_norway = "0.9"
shellexpand = { version = "3.1" }
struson = { version = "^0.6" }
syn = { version = "^2", features = ["full"] }
thiserror = "2"
tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "^0.7", features = ["codec"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-futures = "0.2.5"
url = "^2"
uuid = { version = "^1", features = ["v4"] }

# opc.wss (WebSocket) transport (feature 009 / R5 / FR-044). tokio-tungstenite carries
# no TLS of its own (default-features = false); TLS is layered via tokio-rustls on the
# in-tree rustls 0.23, so the workspace resolves a single rustls major.
tokio-tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# PEM cert/key loading via the maintained rustls-pki-types (rustls-pemfile is unmaintained,
# RUSTSEC-2025-0134; its functionality was folded into rustls-pki-types).
rustls-pki-types = { version = "1", features = ["std"] }
rustls-native-certs = "0.8"
webpki-roots = "0.26"

aes = { version = "^0.8", features = ["zeroize"] }
cbc = "^0.1"
const-oid = { version = "^0.9", features = ["db"] }
ecdsa = { version = "^0.16", default-features = false, features = ["signing", "verifying"] }
hkdf = "^0.12"
hmac = "^0.12"
p256 = { version = "^0.13", default-features = false, features = ["alloc", "arithmetic", "ecdsa", "ecdh", "pem"] }
p384 = { version = "^0.13", default-features = false, features = ["alloc", "arithmetic", "ecdsa", "ecdh", "pem"] }
rand = "^0.8"
rsa = { version = "^0.9", features = ["sha2", "sha1", "pem"] }
sha1 = { version = "^0.10", features = ["oid"] }
sha2 = { version = "^0.10", features = ["oid"] }
x509-cert = { version = "^0.2", features = ["builder", "hazmat"] }
zeroize = "1.8.2"

# Compile the crypto dependencies in release even in debug, to make test
# performance tolerable. This makes initial compile times slightly worse,
# but tests run way faster.
[profile.dev.package.aes]
opt-level = 3
[profile.dev.package.cbc]
opt-level = 3
[profile.dev.package.hmac]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.rsa]
opt-level = 3
[profile.dev.package.sha1]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.x509-cert]
opt-level = 3

# This is probably the most important for the tests at the moment,
# as it is on the hot path of RSA private key generation (gen_prime)
[profile.dev.package.num-bigint-dig]
opt-level = 3
[profile.dev.package.rand_core]
opt-level = 3

# Opt-in size-optimized profile for embedded-Linux deployments (Raspberry Pi class).
# Build with `cargo build --profile embedded ...`. Optimizes for binary size and a small
# resident footprint. See docs/setup.md ("Embedded-Linux deployment") for the full rationale
# and the recommended feature-minimal build line.
#
# NOTE: `panic` is intentionally left as the default `unwind` (NOT `abort`). This crate is a
# connection-oriented network server: a bad chunk must drop the one offending connection, not
# kill the whole process. `panic = "abort"` would convert a recoverable per-connection drop
# into a process-wide DoS — the opposite of the hardening goal.
[profile.embedded]
inherits = "release"
opt-level = "z"   # optimize for size; use "s" if you need more throughput headroom
lto = true        # whole-program optimization shrinks the binary substantially
codegen-units = 1 # better size/inlining at the cost of build time
strip = true      # drop symbols from the shipped binary
panic = "unwind"  # keep per-connection recovery (do NOT set to "abort")
