[package]
name = "async-opcua-crypto"
version = "0.18.0"
description = "OPC UA cryptography library"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-crypto/"
edition = "2021"

[lints]
workspace = true

[lib]
name = "opcua_crypto"

[dependencies]
chrono = { workspace = true }
gethostname = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
digest = { workspace = true }

async-opcua-types = { path = "../async-opcua-types", version = "0.18.0" }

aes = { workspace = true }
cbc = { workspace = true }
const-oid = { workspace = true }
crypto-common = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
x509-cert = { workspace = true }
spki = { workspace = true }

elliptic-curve = { workspace = true }
ecdsa = { workspace = true }
p384 = { workspace = true }
bp256 = { workspace = true }

[dev-dependencies]
tempdir = "0.3"
