[package]
name = "async-opcua-crypto"
version = "0.19.0"
description = "OPC UA cryptography library"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-crypto/"
edition = "2021"
publish = true

[lints]
workspace = true

[lib]
name = "opcua_crypto"

[dependencies]
chrono = { workspace = true }
gethostname = { workspace = true }
num-bigint-dig = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

async-opcua-types = { path = "../async-opcua-types", version = "0.19.0" }

aes = { workspace = true }
aws-lc-rs = { version = "1.17.0", optional = true }
cbc = { workspace = true }
const-oid = { workspace = true }
ecdsa = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
hmac = { workspace = true }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }
rand = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6.1"
x509-cert = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["aws-lc-rs", "ecc"]
aws-lc-rs = ["dep:aws-lc-rs"]
ecc = ["dep:ecdsa", "dep:hkdf", "dep:p256", "dep:p384"]
legacy-crypto = []
