[package]
name = "async-opcua-fx"
version = "0.19.0"
edition = "2021"

[features]
json = ["serde_json", "serde", "serde_with", "async-opcua/json", "async-opcua-types/json"]
xml = ["async-opcua/xml", "async-opcua-types/xml"]

default = ["json", "xml"]

[dependencies]
async-opcua-types = { path = "../async-opcua-types", version = "0.19.0" }
bitflags = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[dependencies.async-opcua]
path = "../async-opcua"
version = "0.19.0"
features = ["client", "server"]
