[package]
name = "async-opcua-history-sqlite"
version = "0.19.0"
description = "OPC UA History Data Access (Part 11) SQLite backend"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
license = "MPL-2.0"
edition = "2021"
publish = false

[lib]
name = "opcua_history_sqlite"

[dependencies]
async-opcua-core = { path = "../async-opcua-core", version = "0.19.0" }
async-opcua-types = { path = "../async-opcua-types", version = "0.19.0" }
async-opcua-server = { path = "../async-opcua-server", version = "0.19.0" }
tokio = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
parking_lot = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
