[package]
name = "async-opcua-pubsub"
version = "0.18.0"
description = "OPC UA PubSub (Part 14) implementation"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
license = "MPL-2.0"
edition = "2021"
publish = false

[lib]
name = "opcua_pubsub"

[features]
# Experimental, simulated TSN transport (AF_XDP stub + tc-taprio shell-out).
# Not suitable for production use; requires real TSN hardware validation.
tsn = ["dep:xsk-rs"]
legacy-crypto = [
  "async-opcua-core/legacy-crypto",
  "async-opcua-crypto/legacy-crypto",
  "async-opcua-server/legacy-crypto",
]

[dependencies]
xsk-rs = { version = "0.3", optional = true }
async-opcua-core = { path = "../async-opcua-core", version = "0.18.0", default-features = false }
async-opcua-crypto = { path = "../async-opcua-crypto", version = "0.18.0", default-features = false }
async-opcua-server = { path = "../async-opcua-server", version = "0.18.0", default-features = false }
async-opcua-types = { path = "../async-opcua-types", version = "0.18.0", features = ["json"] }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = "0.21.0"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lapin = "2.3.1"
rumqttc = "0.25"
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
