[package]
name = "async-opcua-pubsub"
version = "0.19.0"
description = "OPC UA PubSub (Part 14) implementation"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
license = "MPL-2.0"
edition = "2021"
publish = false

[lib]
name = "opcua_pubsub"

[features]
# Experimental, simulated TSN transport (AF_XDP stub + tc-taprio shell-out).
# Not suitable for production use; requires real TSN hardware validation.
tsn = ["dep:xsk-rs"]
legacy-crypto = [
  "async-opcua-core/legacy-crypto",
  "async-opcua-crypto/legacy-crypto",
  "async-opcua-server/legacy-crypto",
]

[dependencies]
xsk-rs = { version = "0.3", optional = true }
async-opcua-core = { path = "../async-opcua-core", version = "0.19.0", default-features = false }
async-opcua-crypto = { path = "../async-opcua-crypto", version = "0.19.0", default-features = false }
async-opcua-server = { path = "../async-opcua-server", version = "0.19.0", default-features = false }
async-opcua-types = { path = "../async-opcua-types", version = "0.19.0", features = ["json"] }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = "0.21.0"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lapin = "2.3.1"
# default features disabled to drop the unused rustls TLS stack, which pulls a
# vulnerable rustls-webpki 0.102.8 (GHSA-82j2-j2ch-gfr8, CRL-parse DoS). This
# transport uses plaintext MQTT only; re-add "use-rustls" if TLS is wired up.
rumqttc = { version = "0.25", default-features = false }
uuid = { workspace = true, features = ["v4"] }

# Test-only: an independent crypto path (raw HMAC-SHA256 + AES-CTR) used by the US5 interop
# cross-check to verify/decrypt production output WITHOUT going through the production codec.
[dev-dependencies]
aes = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
