[package]
name = "async-opcua-server"
version = "0.19.0"
description = "OPC UA server API"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-server/"
edition = "2021"
publish = true

[lints]
workspace = true

[lib]
name = "opcua_server"

[features]
default = ["aws-lc-rs", "ecc", "generated-address-space"]
aws-lc-rs = [
  "async-opcua-client?/aws-lc-rs",
  "async-opcua-core/aws-lc-rs",
  "async-opcua-crypto/aws-lc-rs",
]
ecc = [
  "async-opcua-client?/ecc",
  "async-opcua-core/ecc",
  "async-opcua-crypto/ecc",
]
# Includes all the code to populate the address space with the default node set
# . This is something that embedded systems may or may not require.
generated-address-space = ["async-opcua-core-namespace"]
# Includes serialize/deserialize for OPC-UA types.
json = ["async-opcua-nodes/json", "async-opcua-types/json"]
# Allows a server to register itself with a local discovery server. It does so by
# becoming a client to the LDS, which brings in a dependency to async-opcua-client.
# Omitting the feature saves some memory.
discovery-server-registration = ["async-opcua-client"]
metrics-exporter = []
test-utils = []
legacy-crypto = [
  "async-opcua-client/legacy-crypto",
  "async-opcua-core/legacy-crypto",
  "async-opcua-crypto/legacy-crypto",
]
# opc.wss (WebSocket) transport listener (feature 009 / R5 / FR-044). TLS is layered
# via tokio-rustls on the in-tree rustls 0.23; tokio-tungstenite carries no TLS itself.
wss = [
  "async-opcua-core/wss",
  "dep:tokio-tungstenite",
  "dep:tokio-rustls",
  "dep:rustls",
  "dep:rustls-pki-types",
]

[dependencies]
moka = { version = "0.12", features = ["future", "sync"] }
# opc.wss transport (feature 009 / R5 / FR-044), gated by the `wss` feature.
tokio-tungstenite = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
arc-swap = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
dashmap = "6.1"
futures = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { version = "0.6", features = ["all"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
uuid = { workspace = true }

async-opcua-client = { path = "../async-opcua-client", optional = true, version = "0.19.0", default-features = false }
async-opcua-core = { path = "../async-opcua-core", version = "0.19.0", default-features = false }
async-opcua-core-namespace = { path = "../async-opcua-core-namespace", optional = true, version = "0.19.0" }
async-opcua-crypto = { path = "../async-opcua-crypto", version = "0.19.0", default-features = false }
async-opcua-nodes = { path = "../async-opcua-nodes", features = ["xml"], version = "0.19.0" }
async-opcua-types = { path = "../async-opcua-types", version = "0.19.0" }
async-opcua-xml = { path = "../async-opcua-xml", version = "0.19.0" }
async-opcua-safety = { path = "../async-opcua-safety", version = "0.1.0" }


[dev-dependencies]
async-opcua-client = { path = "../async-opcua-client" }
async-opcua-history-sqlite = { path = "../async-opcua-history-sqlite" }
async-opcua-server = { path = ".", features = [
  "discovery-server-registration",
  "json",
  "test-utils",
] }
criterion = { workspace = true }
serde_norway = { workspace = true }

[[bench]]
name = "session_lookup"
harness = false

[package.metadata.docs.rs]
all-features = true
