[package]
name = "async-opcua"
version = "0.19.0"
description = "OPC UA client and server API"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua/"
edition = "2021"
publish = true

[lib]
name = "opcua"

[features]
default = []
all = ["server", "client"]
# Forwards to the crypto crate's support for legacy (deprecated) security
# policies: Basic128Rsa15 and Basic256.
legacy-crypto = [
  "async-opcua-client/legacy-crypto",
  "async-opcua-core/legacy-crypto",
  "async-opcua-crypto/legacy-crypto",
  "async-opcua-server/legacy-crypto",
]
# opc.wss (WebSocket) transport (feature 009 / R5 / FR-044). Forwards to whichever of
# the client/server crates is enabled; TLS is layered on the in-tree rustls 0.23.
wss = ["async-opcua-client?/wss", "async-opcua-server?/wss"]
# Server default settings
server = ["base-server", "generated-address-space"]
# Base server, without the core address space.
base-server = ["async-opcua-server", "async-opcua-nodes"]
# Client default settings
client = ["async-opcua-client"]
# Console logging just installs a logger that writes out to
# the screen, useful for general logging
# Allows a server to register itself with a local discovery server. It does so by
# becoming a client to the LDS, which brings in a dependency to async-opcua-client.
# Omitting the feature saves some memory.
discovery-server-registration = [
  "async-opcua-server/discovery-server-registration",
]
# Includes all the code to populate the address space with the default node set.
# This is something that embedded systems may or may not require.
generated-address-space = [
  "async-opcua-server/generated-address-space",
  "async-opcua-core-namespace",
]
# Methods for XML parsing and loading of nodesets from XML.
# The json feature adds serialize/deserialize to all OPC-UA types.
json = ["async-opcua-nodes/json", "async-opcua-types/json"]
xml = ["async-opcua-types/xml", "async-opcua-nodes/xml", "async-opcua-xml"]


[dependencies]
chrono = { workspace = true }

async-opcua-client = { path = "../async-opcua-client", optional = true, version = "0.19.0", default-features = false }
async-opcua-core = { path = "../async-opcua-core", version = "0.19.0", default-features = false }
async-opcua-core-namespace = { path = "../async-opcua-core-namespace", optional = true, version = "0.19.0" }
async-opcua-crypto = { path = "../async-opcua-crypto", version = "0.19.0", default-features = false }
async-opcua-macros = { path = "../async-opcua-macros", version = "0.19.0" }
async-opcua-nodes = { path = "../async-opcua-nodes", optional = true, version = "0.19.0" }
async-opcua-server = { path = "../async-opcua-server", optional = true, default-features = false, version = "0.19.0" }
async-opcua-types = { path = "../async-opcua-types", version = "0.19.0" }
async-opcua-xml = { path = "../async-opcua-xml", optional = true, version = "0.19.0" }

[dev-dependencies]
async-opcua-history-sqlite = { path = "../async-opcua-history-sqlite" }
async-opcua-pubsub = { path = "../async-opcua-pubsub" }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tokio-util = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

# Include json when building tests
async-opcua = { path = ".", features = ["all", "json", "xml", "legacy-crypto", "wss"] }

[package.metadata.docs.rs]
all-features = true
