[package]
name = "async-opcua-foundation-profile-embedded-server"
version = "0.13.0"
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
tokio = { version = "^1", default-features = false, features = ["macros", "rt", "signal"] }

[dependencies.async-opcua]
path = "../../async-opcua"
features = ["base-server", "aws-lc-rs"]
default-features = false
