[package]
name = "async-opcua-foundation-profile-micro-server"
version = "0.13.0"
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
tokio = { version = "^1", default-features = false, features = ["macros", "rt", "signal"] }

[dependencies.async-opcua]
path = "../../async-opcua"
features = ["base-server"]
default-features = false
